--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,26 @@ title: EjemploLibro
 author: JEBV
 logo: logo.png
 execute:
-  execute_notebooks: force
+  execute_notebooks: cache
+
+notebook_interface            : "notebook"
+
+binder:
+  binderhub_url               : "https://mybinder.org"
+  text                        : "Launch binder"
+
+latex:
+  latex_engine                : "xelatex"
+  latex_documents:
+    targetname: book.tex
+
+sphinx:
+  config:
+    html_js_files:
+      - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
 
 parse:
   myst_enable_extensions:
-          - amsmath
-          - dollarmath
-          - linkify
+    - amsmath
+    - dollarmath
+    - linkify
